<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quick Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_menu">Quick Menu</string>
    <string name="cadastro">Cadastro</string>
    <string name="preencha_com_seus_dados_para_realizar_o_cadastro">Preencha com seus dados para realizar o cadastro</string>
    <string name="nome_de_usu_rio">Nome de usuário</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="senha">Senha</string>
    <string name="cadastrar_usu_rio">Cadastrar usuário</string>
    <string name="ao_continuar_voc_concorda_com_nossos_termos_de_servi_o_e_pol_tica_de_privacidade">Ao continuar, você concorda com nossos Termos de Serviço e Política de Privacidade</string>
    <string name="cantina_da_s_nia">Cantina da Sônia</string>
    <string name="a_melhor_comida_caseira_da_regi_o">A melhor comida caseira da região.</string>
    <string name="ver_carrinho">Ver Carrinho</string>
    <string name="comprar">Comprar</string>
    <string name="total_2">Total(2)</string>
    <string name="r_59_00">R$ 59,00</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="favoritos">Favoritos</string>
    <string name="promo_es">Promoções</string>
    <string name="tend_ncias">Tendências</string>
    <string name="recentes">Recentes</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="login">Login</string>
    <string name="digite_seu_e_mail_para_entrar_neste_aplicativo">Digite seu e-mail para entrar neste aplicativo</string>
    <string name="entrar">Entrar</string>
    <string name="n_o_tem_uma_conta_fa_a_seu_cadastro">Não tem uma conta? Faça seu cadastro</string>
    <string name="by_clicking_continue_you_agree_to_our_terms_of_service_and_privacy_policy">By clicking continue, you agree to our Terms of Service and Privacy Policy</string>
    <string name="bot_o_de_voltar">Botão de voltar</string>
    <string name="aumentar_quantidade">Aumentar quantidade</string>
    <string name="_1">1</string>
    <string name="diminuir_quantidade">Diminuir quantidade</string>
    <string name="adicionar">Adicionar</string>
    <string name="perfil">Perfil</string>
    <string name="editar_nome_de_usu_rio">Editar nome de usuário</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="olivia13_gmail_com">Olivia13@gmail.com</string>
    <string name="meus_restaurantes">Meus Restaurantes</string>
    <string name="botao_menos">Botao Menos</string>
    <string name="bot_o_mais">Botão Mais</string>
    <string name="remove_produtocardapio">Remove produtoCardapio</string>
    <string name="imagem_do_produtocardapio">Imagem do produtoCardapio</string>
    <string name="lanches">Lanches</string>
    <string name="logo">Logo</string>
    <string name="nome_gen_rico_de_restaurante">Nome genérico de restaurante</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="descri_o_do_produtocardapio">Descrição do produtoCardapio...</string>
    <string name="r_0_00">R$ 0,00</string>
    <string name="produto">Produto</string>
    <string name="imagem_de_produto_recente">Imagem de Produto Recente</string>
    <string name="r_x_xx">R$ X,XX</string>
    <string name="_1x">1x</string>
    <string name="a_a_grande">Açaí Grande</string>
    <string name="logotipo_do_restaurante">Logotipo do Restaurante</string>
    <string name="nome_do_restaurante">Nome do Restaurante</string>
    <string name="tipo_de_cozinha">Tipo de Cozinha</string>
    <string name="adicionar_aos_favoritos">Adicionar aos favoritos</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="pedidos">Pedidos</string>
    <string name="person">Person</string>
</resources>