<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF"
    tools:context=".auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_menu"
            android:textColor="#F5B400"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tvLoginDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/digite_seu_e_mail_para_entrar_neste_aplicativo"
            android:textSize="14sp"
            android:textColor="#555555"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_gmail_com"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:textColor="#FFFFFF"
            android:backgroundTint="#F5B400"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/tvCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_o_tem_uma_conta_fa_a_seu_cadastro"
            android:textColor="#000000"
            android:textSize="14sp">
        </TextView>

        <TextView
            android:id="@+id/tvTermos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/by_clicking_continue_you_agree_to_our_terms_of_service_and_privacy_policy"
            android:textColor="#999999"
            android:textSize="10sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="invisible"
            tools:visibility="visible"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>