<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.MainActivity"
    android:background="@color/cinza_suave"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/color_Secondary"
        app:titleTextColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_Comprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="80dp"
        android:text="@string/comprar"
        android:backgroundTint="@color/color_Secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_Comprar"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/total_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="@string/total_2"
            android:maxWidth="150dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="@string/r_59_00"
            android:textAlignment="textEnd"
            android:maxWidth="150dp"
            android:maxLines="1"
            android:ellipsize="end"/>

    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_carrinho_itens"
        android:layout_width="0dp"
        android:layout_height="0dp"  app:layout_constraintTop_toBottomOf="@id/toolbar" app:layout_constraintBottom_toTopOf="@id/btn_Comprar" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:itemCount="2"
        tools:listitem="@layout/item_carrinho" />


</androidx.constraintlayout.widget.ConstraintLayout>